[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/PublicPixel-z84yD.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sounds/Gunc.wav" type="AudioStream" id=2]
[ext_resource path="res://scripts/Difficulty_Selector.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=33]
size = 15
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=36]
size = 10
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=34]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=35]
extents = Vector2( 14.5, 20 )

[node name="Difficulty_Selector" type="Node2D"]
position = Vector2( 315, 139 )
script = ExtResource( 3 )

[node name="Difficulty" type="Node2D" parent="."]
position = Vector2( -31, 1 )

[node name="Select" type="Label" parent="Difficulty"]
margin_left = -117.0
margin_top = -64.0
margin_right = 150.0
margin_bottom = -21.0
rect_scale = Vector2( 1, 1.5 )
custom_fonts/font = SubResource( 33 )
text = "Select Difficulty"

[node name="DifficultyText" type="Label" parent="Difficulty"]
modulate = Color( 1, 0, 0, 1 )
margin_left = -51.0
margin_top = -16.0
margin_right = 216.0
margin_bottom = 27.0
rect_scale = Vector2( 1, 1.5 )
custom_fonts/font = SubResource( 33 )
text = "Normal"

[node name="Bonus" type="Label" parent="Difficulty"]
modulate = Color( 1, 1, 0.254902, 1 )
margin_left = -97.0
margin_top = 29.0
margin_right = 170.0
margin_bottom = 72.0
rect_scale = Vector2( 1, 1.5 )
custom_fonts/font = SubResource( 36 )
text = "nothin"

[node name="LeftnRight" type="Node2D" parent="Difficulty"]
position = Vector2( -1, -2 )
scale = Vector2( 1.1, 1.2 )

[node name="Right" type="Label" parent="Difficulty/LeftnRight"]
margin_left = 86.4545
margin_top = -20.0
margin_right = 110.454
margin_bottom = 8.0
rect_scale = Vector2( 1, 1.5 )
custom_fonts/font = SubResource( 34 )
text = ">"

[node name="Left" type="Label" parent="Difficulty/LeftnRight"]
margin_left = -86.4545
margin_top = -20.0
margin_right = -57.4545
margin_bottom = 8.0
rect_scale = Vector2( 1, 1.5 )
custom_fonts/font = SubResource( 34 )
text = "<"

[node name="RightBtn" type="Area2D" parent="Difficulty"]
position = Vector2( 99, -2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Difficulty/RightBtn"]
shape = SubResource( 35 )

[node name="LeftBtn" type="Area2D" parent="Difficulty"]
position = Vector2( -83, -2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Difficulty/LeftBtn"]
shape = SubResource( 35 )

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 12.0
pitch_scale = 2.0

[connection signal="input_event" from="Difficulty/RightBtn" to="." method="_on_RightBtn_input_event"]
[connection signal="input_event" from="Difficulty/LeftBtn" to="." method="_on_LeftBtn_input_event"]
